Edit dark mode styles, solve hydration problem in NEXT

--- a/src/app/(home)/components/Styles.module.scss
+++ b/src/app/(home)/components/Styles.module.scss
@@ -109,6 +109,7 @@
             img {
                 width: 35px;
                 height: 35px;
+                background-color: transparent;
             }
         }
     }
